Fixed deprecation on Java 1.9+